--- a/lesson-2-arrays/lecture-slides.ipynb
+++ b/lesson-2-arrays/lecture-slides.ipynb
@@ -1919,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4de33a84-4640-4b2b-92bf-051c08238aa2",
    "metadata": {
     "editable": true,
@@ -1928,8 +1928,22 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.1, 2.2, 3.3],\n",
+       "       [4.4, 5.5, 6.6],\n",
+       "       [7.7, 8.8, 9.9]])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import numpy as np\n",
     "arr = np.array([[1.1, 2.2, 3.3],\n",
     "                [4.4, 5.5, 6.6],\n",
     "                [7.7, 8.8, 9.9]])\n",
@@ -1938,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d23fa80f-02b1-4349-a533-0789b84173ae",
    "metadata": {
     "editable": true,
@@ -1947,7 +1961,19 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.2, 3.3],\n",
+       "       [5.5, 6.6]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "arr[:2, 1:]"
    ]
@@ -1968,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d95e3920-5b36-4124-beac-181f6390d341",
    "metadata": {
     "editable": true,
@@ -1977,7 +2003,18 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7.7, 8.8, 9.9]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "arr[2:, :]"
    ]
@@ -1998,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1852fbdb-e0f0-45b9-9771-7f33ef58b2fc",
    "metadata": {
     "editable": true,
@@ -2007,7 +2044,20 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.1, 2.2],\n",
+       "       [4.4, 5.5],\n",
+       "       [7.7, 8.8]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "arr[:, :2]"
    ]
@@ -2028,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "04464f35-5b36-4e97-b502-0e708dd3e900",
    "metadata": {
     "editable": true,
@@ -2037,7 +2087,18 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4.4, 5.5]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "arr[1:2, :2]"
    ]
@@ -2111,7 +2172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6169b56f-2499-4bd9-bb6d-b1a9781700a9",
    "metadata": {
     "editable": true,
@@ -2120,8 +2181,27 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0,  1,  2,  3,  4],\n",
+       "        [ 5,  6,  7,  8,  9]],\n",
+       "\n",
+       "       [[10, 11, 12, 13, 14],\n",
+       "        [15, 16, 17, 18, 19]],\n",
+       "\n",
+       "       [[20, 21, 22, 23, 24],\n",
+       "        [25, 26, 27, 28, 29]]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "\n",
     "three_dimensional = np.arange(30).reshape((3, 2, 5))\n",
     "three_dimensional"
    ]
@@ -2142,7 +2222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8cd1cf94-fa07-4a66-b00b-f5dcd04f7283",
    "metadata": {
     "editable": true,
@@ -2151,9 +2231,21 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4,  9],\n",
+       "       [24, 29]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "three_dimensional[ : : ]"
+    "three_dimensional[ ::2,::, -1 ]"
    ]
   },
   {
